# RCETI

./: .gitignore  LICENSE  README.md
continuum_robot/: CMakeLists.txt  HELP.md  keyboard_continuum_controller.py  package.xml
continuum_robot/include/continuum_robot/: Continuum.h  ContinuumInterfaceNode.hpp
continuum_robot/launch/: continuum_interface.launch.py  visualize_interface.launch.py  visulize.launch.py
continuum_robot/src/: Continuum.cpp  continuum_interface_node.cpp  core_node.cpp  create_cont_robot.cpp  interface.cpp
install/: local_setup.sh  setup.sh
install/rceti_controller/lib/rceti_controller/: rceti_controller
install/rceti_controller/share/rceti_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rceti_deployment/share/rceti_deployment/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rceti_deployment/share/rceti_deployment/cmake/: rceti_deploymentConfig.cmake
install/rceti_deployment/share/rceti_deployment/launch/: rceti_deployment.launch.xml
install/rceti_keyboard/lib/rceti_keyboard/: rceti_keyboard
install/rceti_keyboard/share/rceti_keyboard/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rceti_support/share/rceti_support/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rceti_support/share/rceti_support/cmake/: rceti_supportConfig.cmake
install/rceti_support/share/rceti_support/launch/: test_rceti.launch.xml
install/rceti_support/share/rceti_support/meshes/visual/: IF_camera_frame_m.STL
install/rceti_support/share/rceti_support/urdf/: rceti.xacro  rceti_macro.xacro
log/: latest_build
rceti_AI/: package.xml  setup.cfg  setup.py
rceti_AI/launch/: rceti_AI_launch.py
rceti_AI/rceti_AI/: IntegrationClasses_v2.py  rceti_AI.py
rceti_AI/resource/: rceti_AI
rceti_continuum/: CMakeLists.txt  README.md  package.xml
rceti_continuum/include/rceti_continuum/: Continuum.h
rceti_continuum/launch/: visualize_interface.launch.py  visulize.launch.py
rceti_continuum/src/: Continuum.cpp  continuum_interface_node.cpp  core_node.cpp  interface.cpp
rceti_continuum/urdf/: continuum.rviz  robot_model.urdf  segment.urdf  xacro_segment.xacro
rceti_controller/: CMakeLists.txt  package.xml  requirements.txt  setup.cfg  setup.py  setup_dependencies.sh  start_controller.sh  test.sh
rceti_controller/rceti_controller/: rceti_robot_controller.py  test.py  testing_controller.py
rceti_deployment/: CMakeLists.txt  package.xml
rceti_deployment/config/: visualize_description.rviz
rceti_deployment/launch/: load_rceti_deployment.launch.xml  load_rceti_deployment.launch.xml.txt  rceti_deployment.launch.xml  rceti_gui.launch.xml
rceti_deployment/urdf/: scene.urdf.xacro
rceti_keyboard/: package.xml  setup.cfg  setup.py
rceti_keyboard/rceti_keyboard/: rceti_keyboard_calibration.py  rceti_keyboard_controller.py  test.py
rceti_moveit/: CMakeLists.txt  package.xml  setup.cfg  setup.py
rceti_moveit/src/: rceti_moveit.cpp
rceti_support/: CMakeLists.txt  package.xml
rceti_support/launch/: load_rceti.launch.xml  load_rceti.launch.xml.txt  test_rceti.launch.xml
rceti_support/meshes/visual/: IF_body.STL  IF_camera_frame.STL  LA_rail.stl  LA_slider.STL  rot.STL  rot_mot_m.STL
rceti_support/meshes/visual/original_scale/: IF_body_frame_m.STL
rceti_support/meshes/visual/scale_slightly_readjusted/: IF_body_frame.stl  IF_camera_frame.stl  LA_rail.stl  LA_slider.stl  rot.stl  rot_mot.stl
rceti_support/meshes/visual/scaled_down_by_1000/: IF_body_frame.stl  IF_camera_frame.stl  LA_rail.stl  LA_slider.stl  rot.stl  rot_mot.stl
rceti_support/meshes/visual/scalie_slightly_readjusted/: IF_body_frame.stl  LA_rail.stl  LA_slider.stl  rot.stl
rceti_support/urdf/: actuators.xacro  rceti.xacro  rceti_frame.urdf  rceti_frame_macro.xacro  rceti_frame_xacros_test.urdf  rceti_frame_xacros_test.urdf.txt  rceti_macro.xacro  rceti_macro.xacro.txt  template.urdf
