<?xml version="1.0"?>
<package format="3">
  <name>continuum_robot</name>
  <version>0.0.0</version>
  <description>The continuum_robot package</description>
  <maintainer email="haitham@todo.todo">haitham</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>interactive_markers</build_depend>

  <depend>tf2_geometry_msgs</depend>


  <exec_depend>rclcpp</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>interactive_markers</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>