<?xml version="1.0"?>
<package format="3">
  <name>rceti_AI</name>
  <version>0.1.0</version>
  <description>AI-based servo controller using YOLOv8</description>
  <maintainer email="elyamani.2@osu.edu">Adam Elyamani</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv-python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>