<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- Package.xml for rceti_deployment, this file handles all dependencies for Colcon build-->
<package format="2">
  <name>rceti_deployment</name>
  <version>0.1.0</version>
  <description>
    <p>The following package is the RCETI Deployment package for the Spring 2025 CSE Capstone Project</p>
  </description>
  <author>Ben Turner</author>
  <maintainer email="turner.1893@buckeyemail.osu.edu">Ben Turner</maintainer>
  <license>Apache 2.0 License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
